Refactored Java for immutability and minimal side-effects throughout